--- a/src/assets/stylesheets/customs/components/_section.scss
+++ b/src/assets/stylesheets/customs/components/_section.scss
@@ -6,4 +6,10 @@
     text-align: center;
     margin-bottom: $spacer * 2.25;
   }
+  &-title-lg {
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 92px;
+  }
 }
