--- a/src/assets/stylesheets/customs/components/_navbar.scss
+++ b/src/assets/stylesheets/customs/components/_navbar.scss
@@ -19,7 +19,7 @@
   }
   &-option-list {
     position: absolute;
-    top: 50px;
+    top: 130%;
     left: 0;
     z-index: 3;
     width: 100%;
@@ -32,6 +32,7 @@
       margin-bottom: 5px;
       font-size: 20px;
       text-align: center;
+      color: $dark;
       &:hover,
       &:focus {
         padding: 10px 6px;
