--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -302,7 +302,7 @@ $body-text-align: null !default;
 $link-color: $white !default;
 $link-decoration: none !default;
 $link-shade-percentage: 5% !default;
-$link-hover-color: shift-color($warning, $link-shade-percentage) !default;
+$link-hover-color: shift-color($teal, $link-shade-percentage) !default;
 $link-hover-decoration: null !default;
 
 $stretched-link-pseudo-element: after !default;
