--- a/src/assets/stylesheets/_all.scss
+++ b/src/assets/stylesheets/_all.scss
@@ -6,6 +6,7 @@
 
 // cutom style
 @import './customs/components/components';
+@import './customs/utils/utils';
 @import './customs/pages/pages';
 
 // import swiper
