--- a/src/assets/stylesheets/customs/components/_section.scss
+++ b/src/assets/stylesheets/customs/components/_section.scss
@@ -1,10 +1,20 @@
 .section {
-  padding: 92px 0;
+  padding: 32px 0;
+  @include media-breakpoint-up(md) {
+    padding: 48px 0;
+  }
+  @include media-breakpoint-up(lg) {
+    padding: 92px 0;
+  }
   &-title {
-    font-size: $font-size-xxl;
+    font-size: $font-size-sm;
     font-weight: bold;
     text-align: center;
-    margin-bottom: $spacer * 2.25;
+    margin-bottom: $spacer * 1.5;
+    @include media-breakpoint-up(md) {
+      font-size: $font-size-xxl;
+      margin-bottom: $spacer * 2.25;
+    }
   }
   &-title-lg {
     font-size: 50px;
