--- a/src/assets/stylesheets/customs/pages/_home.scss
+++ b/src/assets/stylesheets/customs/pages/_home.scss
@@ -1,31 +1,49 @@
 .read-more-btn {
   position: relative;
-  width: 30%;
+  width: 80%;
   font-weight: bold;
   background: $success;
   color: $light;
+  @include media-breakpoint-up(md) {
+    width: 30%;
+  }
 }
 .contribute-note {
-  width: 50%;
   border-radius: $border-radius;
   background: $primary;
-  margin: 0 auto;
-  padding: 16px 0;
+  padding: 16px 32px;
+  @include media-breakpoint-up(lg) {
+    width: 50%;
+    margin: 0 auto;
+    padding: 16px 0px;
+  }
   &-title {
-    font-size: 40px;
+    font-size: 25px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 85px;
+    margin-bottom: 50px;
+    @include media-breakpoint-up(md) {
+      font-size: 40px;
+      margin-bottom: 85px;
+    }
   }
   &-subtitle {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 30px;
+    @include media-breakpoint-up(md) {
+      font-size: 30px;
+    }
   }
   &-text {
-    width: 50%;
-    font-size: 20px;
+    font-size: 14px;
     margin: 0 auto 30px auto;
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+    }
+    @include media-breakpoint-up(lg) {
+      width: 50%;
+    }
   }
 }
