--- a/src/assets/stylesheets/customs/components/_navbar.scss
+++ b/src/assets/stylesheets/customs/components/_navbar.scss
@@ -56,3 +56,16 @@
     background-repeat: no-repeat;
   }
 }
+.hamburger-menu {
+  position: absolute;
+  left: 100%;
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  background: $primary;
+  padding: 30px 15px;
+  &.active {
+    left: 0;
+    transition: 1s;
+  }
+}
