--- a/src/assets/stylesheets/customs/components/_section.scss
+++ b/src/assets/stylesheets/customs/components/_section.scss
@@ -7,7 +7,7 @@
     padding: 92px 0;
   }
   &-title {
-    font-size: $font-size-sm;
+    font-size: $font-size-md;
     font-weight: bold;
     text-align: center;
     margin-bottom: $spacer * 1.5;
@@ -17,9 +17,13 @@
     }
   }
   &-title-lg {
-    font-size: 50px;
+    font-size: 25px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 92px;
+    margin-bottom: 32px;
+    @include media-breakpoint-up(md) {
+      font-size: 50px;
+      margin-bottom: 92px;
+    }
   }
 }
