--- a/src/assets/stylesheets/customs/components/_btn.scss
+++ b/src/assets/stylesheets/customs/components/_btn.scss
@@ -6,11 +6,25 @@
   }
   &-sm {
     border-radius: $btn-border-radius-lg;
-    padding: 13px 26px;
+    padding: 8px 22px;
+    min-width: 120px;
+    @include media-breakpoint-up(md) {
+      padding: 13px 18px;
+      min-width: auto;
+    }
+    @include media-breakpoint-up(lg) {
+      padding: 13px 26px;
+    }
   }
   &-lg {
     border-radius: $btn-border-radius-lg;
     padding: 13px 16px 13px 75px;
+    @include media-breakpoint-up(md) {
+      padding: 13px 26px;
+    }
+    @include media-breakpoint-up(lg) {
+      padding: 13px 16px 13px 75px;
+    }
   }
   &-success {
     color: $light;
