--- a/src/assets/stylesheets/customs/components/_navbar.scss
+++ b/src/assets/stylesheets/customs/components/_navbar.scss
@@ -23,10 +23,12 @@
     left: 0;
     z-index: 3;
     width: 100%;
+    height: 350px;
     padding: 25px 19px;
     border-radius: 20px;
     box-shadow: 0px 4px 15px rgba(#04123a, 15%);
     background: #fff;
+    overflow: auto;
     > li {
       padding: 11px 6px;
       margin-bottom: 5px;
@@ -64,8 +66,10 @@
   height: 100vh;
   background: $primary;
   padding: 30px 15px;
+  display: none;
   &.active {
     left: 0;
+    display: block;
     transition: 1s;
   }
 }
